src/test/ui/wf/wf-in-fn-where-clause.stderr
error[E0277]: the trait bound `U: Copy` is not satisfied
  --> $DIR/wf-in-fn-where-clause.rs:10:14
   |
LL | trait MustBeCopy<T:Copy> {
   |                    ---- required by this bound in `MustBeCopy`
...
LL |     where T: MustBeCopy<U>
   |              ^^^^^^^^^^^^^ the trait `Copy` is not implemented for `U`
   |
help: consider further restricting type parameter `U`
   |
LL |     where T: MustBeCopy<U>, U: Copy
   |                           ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
